// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AdvancedSearch Snapshots: AdvancedSearch Default 1`] = `
<DragDropContext(AdvancedSearchWrapped)>
  <AdvancedSearchWrapped>
    <AdvancedSearch
      autoHide={false}
      filterCategories={
        Object {
          "CUDA Version": Array [
            "jupyter",
            "jupyterlab",
          ],
          "Development Environments": Array [
            "salmon",
            "trout",
            "pike",
          ],
          "Languages": Array [
            "python",
            "r",
            "cobol",
          ],
        }
      }
      setTags={[Function]}
      showButton={true}
      tags={Array []}
      withoutContext={[Function]}
    >
      <div
        className="AdvancedSearch"
        data-selenium-id="AdvancedSearchx"
      >
        <div
          className="flex"
        >
          <div
            className="flex-1"
          >
            <ReactTags
              allowAdditionFromPaste={true}
              allowDeleteFromEmptyInput={true}
              allowDragDrop={true}
              allowUnique={true}
              autocomplete={true}
              autofocus={false}
              data-resetselectedfilter-id="AdvancedSearch"
              delimiters={
                Array [
                  13,
                  9,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              handleInputFocus={[Function]}
              inline={true}
              inputFieldPosition="inline"
              labelField="text"
              placeholder="Search by keyword, tags or filters"
              readOnly={false}
              resetInputOnDelete={true}
              suggestions={
                Array [
                  Object {
                    "className": "Languages",
                    "id": "python",
                    "text": "python",
                  },
                  Object {
                    "className": "Languages",
                    "id": "r",
                    "text": "r",
                  },
                  Object {
                    "className": "Languages",
                    "id": "cobol",
                    "text": "cobol",
                  },
                  Object {
                    "className": "CUDA Version",
                    "id": "jupyter",
                    "text": "jupyter",
                  },
                  Object {
                    "className": "CUDA Version",
                    "id": "jupyterlab",
                    "text": "jupyterlab",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "salmon",
                    "text": "salmon",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "trout",
                    "text": "trout",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "pike",
                    "text": "pike",
                  },
                ]
              }
              tags={Array []}
            >
              <div
                className="ReactTags__tags react-tags-wrapper"
              >
                <div
                  className="ReactTags__selected"
                >
                  <div
                    className="ReactTags__tagInput"
                  >
                    <input
                      aria-label="Search by keyword, tags or filters"
                      className="ReactTags__tagInputField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onPaste={[Function]}
                      placeholder="Search by keyword, tags or filters"
                      type="text"
                    />
                    <Suggestions
                      classNames={
                        Object {
                          "activeSuggestion": "ReactTags__activeSuggestion",
                          "remove": "ReactTags__remove",
                          "selected": "ReactTags__selected",
                          "suggestions": "ReactTags__suggestions",
                          "tag": "ReactTags__tag",
                          "tagInput": "ReactTags__tagInput",
                          "tagInputField": "ReactTags__tagInputField",
                          "tags": "ReactTags__tags",
                        }
                      }
                      handleClick={[Function]}
                      handleHover={[Function]}
                      isFocused={false}
                      labelField="text"
                      minQueryLength={2}
                      query=""
                      selectedIndex={-1}
                      suggestions={
                        Array [
                          Object {
                            "className": "Languages",
                            "id": "python",
                            "text": "python",
                          },
                          Object {
                            "className": "Languages",
                            "id": "r",
                            "text": "r",
                          },
                          Object {
                            "className": "Languages",
                            "id": "cobol",
                            "text": "cobol",
                          },
                          Object {
                            "className": "CUDA Version",
                            "id": "jupyter",
                            "text": "jupyter",
                          },
                          Object {
                            "className": "CUDA Version",
                            "id": "jupyterlab",
                            "text": "jupyterlab",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "salmon",
                            "text": "salmon",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "trout",
                            "text": "trout",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "pike",
                            "text": "pike",
                          },
                        ]
                      }
                    />
                  </div>
                </div>
              </div>
            </ReactTags>
          </div>
          <button
            className="Btn Btn__AdvancedSearch"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="AdvancedSearch__filters"
        >
          <Category
            category="Languages"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={0}
            key="Languages"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="Languages"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="Languages"
                onClick={[Function]}
              >
                Languages
              </div>
            </div>
          </Category>
          <Category
            category="CUDA Version"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={1}
            key="CUDA Version"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="CUDA Version"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="CUDA Version"
                onClick={[Function]}
              >
                CUDA Version
              </div>
              <div
                className="AdvancedSearch__info"
                data-resetselectedfilter-id="AdvancedSearch__info"
                onClick={[Function]}
              />
            </div>
          </Category>
          <Category
            category="Development Environments"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={2}
            key="Development Environments"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="Development Environments"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="Development Environments"
                onClick={[Function]}
              >
                Development Environments
              </div>
            </div>
          </Category>
        </div>
      </div>
    </AdvancedSearch>
  </AdvancedSearchWrapped>
</DragDropContext(AdvancedSearchWrapped)>
`;

exports[`Storyshots Components/AdvancedSearch Snapshots: AdvancedSearch Packages 1`] = `
<DragDropContext(AdvancedSearchWrapped)
  customStyle="packages"
>
  <AdvancedSearchWrapped
    customStyle="packages"
  >
    <AdvancedSearch
      autoHide={false}
      customStyle="packages"
      filterCategories={
        Object {
          "CUDA Version": Array [
            "jupyter",
            "jupyterlab",
          ],
          "Development Environments": Array [
            "salmon",
            "trout",
            "pike",
          ],
          "Languages": Array [
            "python",
            "r",
            "cobol",
          ],
        }
      }
      setTags={[Function]}
      showButton={true}
      tags={Array []}
      withoutContext={[Function]}
    >
      <div
        className="AdvancedSearch AdvancedSearch--packages"
        data-selenium-id="AdvancedSearchx"
      >
        <div
          className="flex"
        >
          <div
            className="flex-1"
          >
            <ReactTags
              allowAdditionFromPaste={true}
              allowDeleteFromEmptyInput={true}
              allowDragDrop={true}
              allowUnique={true}
              autocomplete={true}
              autofocus={false}
              data-resetselectedfilter-id="AdvancedSearch"
              delimiters={
                Array [
                  13,
                  9,
                ]
              }
              handleAddition={[Function]}
              handleDelete={[Function]}
              handleInputFocus={[Function]}
              inline={true}
              inputFieldPosition="inline"
              labelField="text"
              placeholder="Search by keyword, tags or filters"
              readOnly={false}
              resetInputOnDelete={true}
              suggestions={
                Array [
                  Object {
                    "className": "Languages",
                    "id": "python",
                    "text": "python",
                  },
                  Object {
                    "className": "Languages",
                    "id": "r",
                    "text": "r",
                  },
                  Object {
                    "className": "Languages",
                    "id": "cobol",
                    "text": "cobol",
                  },
                  Object {
                    "className": "CUDA Version",
                    "id": "jupyter",
                    "text": "jupyter",
                  },
                  Object {
                    "className": "CUDA Version",
                    "id": "jupyterlab",
                    "text": "jupyterlab",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "salmon",
                    "text": "salmon",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "trout",
                    "text": "trout",
                  },
                  Object {
                    "className": "Development Environments",
                    "id": "pike",
                    "text": "pike",
                  },
                ]
              }
              tags={Array []}
            >
              <div
                className="ReactTags__tags react-tags-wrapper"
              >
                <div
                  className="ReactTags__selected"
                >
                  <div
                    className="ReactTags__tagInput"
                  >
                    <input
                      aria-label="Search by keyword, tags or filters"
                      className="ReactTags__tagInputField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onPaste={[Function]}
                      placeholder="Search by keyword, tags or filters"
                      type="text"
                    />
                    <Suggestions
                      classNames={
                        Object {
                          "activeSuggestion": "ReactTags__activeSuggestion",
                          "remove": "ReactTags__remove",
                          "selected": "ReactTags__selected",
                          "suggestions": "ReactTags__suggestions",
                          "tag": "ReactTags__tag",
                          "tagInput": "ReactTags__tagInput",
                          "tagInputField": "ReactTags__tagInputField",
                          "tags": "ReactTags__tags",
                        }
                      }
                      handleClick={[Function]}
                      handleHover={[Function]}
                      isFocused={false}
                      labelField="text"
                      minQueryLength={2}
                      query=""
                      selectedIndex={-1}
                      suggestions={
                        Array [
                          Object {
                            "className": "Languages",
                            "id": "python",
                            "text": "python",
                          },
                          Object {
                            "className": "Languages",
                            "id": "r",
                            "text": "r",
                          },
                          Object {
                            "className": "Languages",
                            "id": "cobol",
                            "text": "cobol",
                          },
                          Object {
                            "className": "CUDA Version",
                            "id": "jupyter",
                            "text": "jupyter",
                          },
                          Object {
                            "className": "CUDA Version",
                            "id": "jupyterlab",
                            "text": "jupyterlab",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "salmon",
                            "text": "salmon",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "trout",
                            "text": "trout",
                          },
                          Object {
                            "className": "Development Environments",
                            "id": "pike",
                            "text": "pike",
                          },
                        ]
                      }
                    />
                  </div>
                </div>
              </div>
            </ReactTags>
          </div>
          <button
            className="Btn Btn__AdvancedSearch"
            onClick={[Function]}
            type="button"
          />
        </div>
        <div
          className="AdvancedSearch__filters"
        >
          <Category
            category="Languages"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={0}
            key="Languages"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="Languages"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="Languages"
                onClick={[Function]}
              >
                Languages
              </div>
            </div>
          </Category>
          <Category
            category="CUDA Version"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={1}
            key="CUDA Version"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="CUDA Version"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="CUDA Version"
                onClick={[Function]}
              >
                CUDA Version
              </div>
              <div
                className="AdvancedSearch__info"
                data-resetselectedfilter-id="AdvancedSearch__info"
                onClick={[Function]}
              />
            </div>
          </Category>
          <Category
            category="Development Environments"
            expandedIndex={null}
            filterCategories={
              Object {
                "CUDA Version": Array [
                  "jupyter",
                  "jupyterlab",
                ],
                "Development Environments": Array [
                  "salmon",
                  "trout",
                  "pike",
                ],
                "Languages": Array [
                  "python",
                  "r",
                  "cobol",
                ],
              }
            }
            handleAddition={[Function]}
            index={2}
            key="Development Environments"
            setExpandedIndex={[Function]}
            toggleTooltip={[Function]}
            tooltipShown={false}
          >
            <div
              className="AdvancedSearch__filter-container"
              data-selenium-id="Category"
              key="Development Environments"
            >
              <div
                className="AdvancedSearch__filter-section"
                data-resetselectedfilter-id="AdvancedSearch__filter-section"
                key="Development Environments"
                onClick={[Function]}
              >
                Development Environments
              </div>
            </div>
          </Category>
        </div>
      </div>
    </AdvancedSearch>
  </AdvancedSearchWrapped>
</DragDropContext(AdvancedSearchWrapped)>
`;
